# dryrun

./: .gitignore  Cargo.toml  LICENSE  README.md  TUTORIAL.md  dryrun-readonly-role.sql
.cargo-husky/hooks/: pre-commit
.github/: FUNDING.yml
crates/dry_run_cli/: Cargo.toml
crates/dry_run_cli/src/: main.rs  pgmustard.rs
crates/dry_run_cli/src/mcp/: helpers.rs  mod.rs  params.rs  server.rs  server_tests.rs
crates/dry_run_core/: Cargo.toml
crates/dry_run_core/knowledge/conventions/: anti_patterns.md  arrays.md  constraints.md  cte_patterns.md  design_patterns.md  naming.md  primary_keys.md  range_types.md  timestamps.md  types.md
crates/dry_run_core/knowledge/index_decisions/: brin.md  btree.md  composite.md  covering.md  gin.md  gist.md  partial.md
crates/dry_run_core/knowledge/migration_safety/: add_check_constraint.md  add_column.md  add_foreign_key.md  add_not_null.md  alter_column_type.md  create_index.md  drop_column.md  rename.md
crates/dry_run_core/src/: config.rs  connection.rs  error.rs  jit.rs  lib.rs  version.rs
crates/dry_run_core/src/audit/: mod.rs  types.rs
crates/dry_run_core/src/audit/rules/: fk_graph.rs  indexes.rs  mod.rs  schema.rs
crates/dry_run_core/src/diff/: changeset.rs  mod.rs
crates/dry_run_core/src/history/: mod.rs  snapshot_store.rs  store.rs
crates/dry_run_core/src/knowledge/: document.rs  mod.rs
crates/dry_run_core/src/lint/: mod.rs  rules.rs  types.rs
crates/dry_run_core/src/lint/rules/: constraints.rs  mod.rs  naming.rs  partitions.rs  pk.rs  timestamps.rs  typecheck.rs
crates/dry_run_core/src/query/: advise.rs  advise_tests.rs  antipatterns.rs  explain.rs  migration.rs  mod.rs  parse.rs  plan.rs  plan_warnings.rs  suggest.rs  validate.rs
crates/dry_run_core/src/schema/: bloat.rs  hash.rs  inject.rs  introspect.rs  load.rs  mod.rs  profile.rs  snapshot.rs  snapshot_tests.rs  types.rs  types_tests.rs  vacuum.rs  vacuum_tests.rs
crates/dry_run_core/src/schema/introspect/: catalog.rs  comments.rs  indexes.rs  mod.rs  objects.rs  partitions.rs  policies.rs  raw_types.rs  stats.rs  tables.rs
docs/: dryrun-toml.md  multi-node-stats.md
examples/demo/: dryrun.toml  schema.sql
examples/demo/.dryrun/: schema.json
