[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.6.0"
edition = "2024"
repository = "https://github.com/boringSQL/dryrun"

[workspace.lints.clippy]
unwrap_used = "deny"
dbg_macro = "deny"

[workspace.dependencies]
dry_run_core = { path = "crates/dry_run_core" }
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
pg_query = "6.1"
regex = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "tls-rustls", "chrono"] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
tracing = "0.1"
zstd = "0.13"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
rmcp = { version = "0.8", features = ["server", "transport-io", "transport-sse-server", "macros"] }
schemars = "1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
