[package]
name = "dry_run_cli"
version.workspace = true
edition.workspace = true
repository.workspace = true

[[bin]]
name = "dryrun"
path = "src/main.rs"

[dependencies]
anyhow = "1"
chrono = { workspace = true }
clap = { workspace = true }
dry_run_core = { workspace = true }
reqwest = { workspace = true }
rmcp = { workspace = true }
schemars = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
zstd = { workspace = true }

[dev-dependencies]
cargo-husky = { version = "1", default-features = false, features = ["user-hooks"] }
